fixed center alignment

--- a/css/book.css
+++ b/css/book.css
@@ -8,9 +8,7 @@ p {
 figcaption {
   font-weight: bold;
   font-size: 125%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+  text-align: center
 }
 img {
   display: block;
